Localization(zh-cn) updated to 4.8
Signed-off-by: kanonmelodis <kanonmelodis@gmail.com>

--- a/src/GIMI-ModManager.WinUI/Assets/Games/Genshin/Languages/zh-cn/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/Genshin/Languages/zh-cn/characters.json
@@ -9,7 +9,7 @@
   },
   {
     "InternalName": "Gliders",
-    "DisplayName": "翅膀"
+    "DisplayName": "风之翼"
   },
   {
     "InternalName": "Albedo",
