--- a/src/GIMI-ModManager.WinUI/Assets/Games/WuWa/Languages/zh-cn/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/WuWa/Languages/zh-cn/characters.json
@@ -8,302 +8,394 @@
     "DisplayName": "武器"
   },
   {
-    "Keys": ["rover"],
+    "Keys": [
+      "rover"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "rover.png",
     "Rarity": 5,
     "Element": "Adaptive",
     "Class": "Sword",
-    "Region": ["Outlander"],
+    "Region": [
+      "Outlander"
+    ],
     "ModFilesName": "rover",
     "InGameSkins": [],
     "InternalName": "Rover",
     "DisplayName": "漂泊者"
   },
   {
-    "Keys": ["Jianxin"],
+    "Keys": [
+      "Jianxin"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "jianxin.png",
     "Rarity": 5,
     "Element": "Aero",
     "Class": "Gauntlet",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Jianxin",
     "InGameSkins": [],
     "InternalName": "Jianxin",
     "DisplayName": "鉴心"
   },
   {
-    "Keys": ["jiyan"],
+    "Keys": [
+      "jiyan"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "jiyan.png",
     "Rarity": 5,
     "Element": "Aero",
     "Class": "Broadblade",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Jiyan",
     "InGameSkins": [],
     "InternalName": "Jiyan",
     "DisplayName": "忌炎"
   },
   {
-    "Keys": ["lingyang"],
+    "Keys": [
+      "lingyang"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "lingyang.png",
     "Rarity": 5,
     "Element": "Glacio",
     "Class": "Gauntlet",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Lingyang",
     "InGameSkins": [],
     "InternalName": "Lingyang",
     "DisplayName": "凌阳"
   },
   {
-    "Keys": ["baizhi"],
+    "Keys": [
+      "baizhi"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "baizhi.png",
     "Rarity": 4,
     "Element": "Glacio",
     "Class": "Rectifier",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Baizhi",
     "InGameSkins": [],
     "InternalName": "Baizhi",
     "DisplayName": "白芷"
   },
   {
-    "Keys": ["chixia"],
+    "Keys": [
+      "chixia"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "chixia.png",
     "Rarity": 4,
     "Element": "Fusion",
     "Class": "Pistols",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Chixia",
     "InGameSkins": [],
     "InternalName": "Chixia",
     "DisplayName": "炽霞"
   },
   {
-    "Keys": ["danjin"],
+    "Keys": [
+      "danjin"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "danjin.png",
     "Rarity": 4,
     "Element": "Havoc",
     "Class": "Sword",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Danjin",
     "InGameSkins": [],
     "InternalName": "Danjin",
     "DisplayName": "丹瑾"
   },
   {
-    "Keys": ["sanhua"],
+    "Keys": [
+      "sanhua"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "sanhua.png",
     "Rarity": 4,
     "Element": "Glacio",
     "Class": "Sword",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Sanhua",
     "InGameSkins": [],
     "InternalName": "Sanhua",
     "DisplayName": "散华"
   },
   {
-    "Keys": ["taoqi"],
+    "Keys": [
+      "taoqi"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "taoqi.png",
     "Rarity": 4,
     "Element": "Havoc",
     "Class": "Broadblade",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Taoqi",
     "InGameSkins": [],
     "InternalName": "Taoqi",
     "DisplayName": "桃祈"
   },
   {
-    "Keys": ["yangyang"],
+    "Keys": [
+      "yangyang"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "yangyang.png",
     "Rarity": 4,
     "Element": "Aero",
     "Class": "Sword",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Yangyang",
     "InGameSkins": [],
     "InternalName": "Yangyang",
     "DisplayName": "秧秧"
   },
   {
-    "Keys": ["yuanwu"],
+    "Keys": [
+      "yuanwu"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "yuanwu.png",
     "Rarity": 4,
     "Element": "Electro",
     "Class": "Gauntlet",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Yuanwu",
     "InGameSkins": [],
     "InternalName": "Yuanwu",
     "DisplayName": "渊武"
   },
   {
-    "Keys": ["calcharo"],
+    "Keys": [
+      "calcharo"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "calcharo.png",
     "Rarity": 5,
     "Element": "Electro",
     "Class": "Broadblade",
-    "Region": ["Newfed"],
+    "Region": [
+      "Newfed"
+    ],
     "ModFilesName": "Calcharo",
     "InGameSkins": [],
     "InternalName": "Calcharo",
     "DisplayName": "卡卡罗"
   },
   {
-    "Keys": ["encore"],
+    "Keys": [
+      "encore"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "encore.png",
     "Rarity": 5,
     "Element": "Fusion",
     "Class": "Rectifier",
-    "Region": ["Bshores"],
+    "Region": [
+      "Bshores"
+    ],
     "ModFilesName": "Encore",
     "InGameSkins": [],
     "InternalName": "Encore",
     "DisplayName": "安可"
   },
   {
-    "Keys": ["verina"],
+    "Keys": [
+      "verina"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "verina.png",
     "Rarity": 5,
     "Element": "Spectro",
     "Class": "Rectifier",
-    "Region": ["Newfed"],
+    "Region": [
+      "Newfed"
+    ],
     "ModFilesName": "Verina",
     "InGameSkins": [],
     "InternalName": "Verina",
     "DisplayName": "维里奈"
   },
   {
-    "Keys": ["aalto"],
+    "Keys": [
+      "aalto"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "aalto.png",
     "Rarity": 4,
     "Element": "Aero",
     "Class": "Pistols",
-    "Region": ["Bshores"],
+    "Region": [
+      "Bshores"
+    ],
     "ModFilesName": "Aalto",
     "InGameSkins": [],
     "InternalName": "Aalto",
     "DisplayName": "秋水"
   },
   {
-    "Keys": ["mortefi"],
+    "Keys": [
+      "mortefi"
+    ],
     "ReleaseDate": "2024-05-23T00:00:00",
     "Image": "mortefi.png",
     "Rarity": 4,
     "Element": "Fusion",
     "Class": "Pistols",
-    "Region": ["Newfed"],
+    "Region": [
+      "Newfed"
+    ],
     "ModFilesName": "Mortefi",
     "InGameSkins": [],
     "InternalName": "Mortefi",
     "DisplayName": "莫特斐"
   },
   {
-    "Keys": ["yinlin"],
+    "Keys": [
+      "yinlin"
+    ],
     "ReleaseDate": "2024-06-6T00:00:00",
     "Image": "yinlin.png",
     "Rarity": 5,
     "Element": "Electro",
     "Class": "Rectifier",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Yinlin",
     "InGameSkins": [],
     "InternalName": "Yinlin",
     "DisplayName": "吟霖"
   },
   {
-    "Keys": ["Changli"],
+    "Keys": [
+      "Changli"
+    ],
     "ReleaseDate": "2024-06-6T00:00:00",
     "Image": "Changli.png",
     "Rarity": 5,
     "Element": "Fusion",
     "Class": "Sword",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Changli",
     "InGameSkins": [],
     "InternalName": "Changli",
     "DisplayName": "长离"
   },
   {
-    "Keys": ["Jinhsi"],
+    "Keys": [
+      "Jinhsi"
+    ],
     "ReleaseDate": "2024-06-6T00:00:00",
     "Image": "Jinhsi.png",
     "Rarity": 5,
     "Element": "Spectro",
     "Class": "Broadblade",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Jinhsi",
     "InGameSkins": [],
     "InternalName": "Jinhsi",
     "DisplayName": "今汐"
   },
   {
-    "Keys": ["Zhezhi"],
+    "Keys": [
+      "Zhezhi"
+    ],
     "ReleaseDate": "2024-08-15T00:00:00",
     "Image": "Zhezhi.png",
     "Rarity": 5,
     "Element": "Glacio",
     "Class": "Rectifier",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Zhezhi",
     "InGameSkins": [],
     "InternalName": "Zhezhi",
     "DisplayName": "折枝"
   },
   {
-    "Keys": ["Xiangliyao"],
+    "Keys": [
+      "Xiangliyao"
+    ],
     "ReleaseDate": "2024-08-15T00:00:00",
     "Image": "Xiangliyao.png",
     "Rarity": 5,
     "Element": "Electro",
     "Class": "Gauntlet",
-    "Region": ["Huanglong"],
+    "Region": [
+      "Huanglong"
+    ],
     "ModFilesName": "Xiangliyao",
     "InGameSkins": [],
     "InternalName": "Xiangliyao",
     "DisplayName": "相里要"
   },
   {
-    "Keys": ["shorekeeper"],
+    "Keys": [
+      "shorekeeper"
+    ],
     "ReleaseDate": "2024-09-29T00:00:00",
     "Image": "shorekeeper.png",
     "Rarity": 5,
     "Element": "Spectro",
     "Class": "Rectifier",
-    "Region": ["Bshores"],
+    "Region": [
+      "Bshores"
+    ],
     "ModFilesName": "shorekeeper",
     "InGameSkins": [],
     "InternalName": "Shorekeeper",
     "DisplayName": "守岸人"
   },
   {
-    "Keys": ["YOUHU"],
+    "Keys": [
+      "Youhu"
+    ],
     "ReleaseDate": "2024-10-24T00:00:00",
-    "Image": "YouHu.png",
+    "Image": "Youhu.png",
     "Rarity": 4,
     "Element": "Glacio",
     "Class": "Gauntlet",
-    "Region": ["Huanglong"],
-    "ModFilesName": "YouHu",
+    "Region": [
+      "Huanglong"
+    ],
+    "ModFilesName": "Youhu",
     "InGameSkins": [],
-    "InternalName": "YouHu",
+    "InternalName": "Youhu",
     "DisplayName": "釉瑚"
   }
 ]
