chore(WuWa): Added Shorekeeper and Youhu (#267)
* add shorekeeper and correct some text errors

* add YOUHU

* reverted formatting changes

* adjust image

* Rename

Signed-off-by: vagmr <2737165206@qq.com>

---------

Signed-off-by: vagmr <2737165206@qq.com>

--- a/src/GIMI-ModManager.WinUI/Assets/Games/WuWa/Languages/zh-cn/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/WuWa/Languages/zh-cn/characters.json
@@ -300,7 +300,7 @@
     "Keys": [
       "Changli"
     ],
-    "ReleaseDate": "2025-06-6T00:00:00",
+    "ReleaseDate": "2024-06-6T00:00:00",
     "Image": "Changli.png",
     "Rarity": 5,
     "Element": "Fusion",
@@ -317,7 +317,7 @@
     "Keys": [
       "Jinhsi"
     ],
-    "ReleaseDate": "2025-06-6T00:00:00",
+    "ReleaseDate": "2024-06-6T00:00:00",
     "Image": "Jinhsi.png",
     "Rarity": 5,
     "Element": "Spectro",
@@ -334,7 +334,7 @@
     "Keys": [
       "Zhezhi"
     ],
-    "ReleaseDate": "2025-08-15T00:00:00",
+    "ReleaseDate": "2024-08-15T00:00:00",
     "Image": "Zhezhi.png",
     "Rarity": 5,
     "Element": "Glacio",
@@ -351,7 +351,7 @@
     "Keys": [
       "Xiangliyao"
     ],
-    "ReleaseDate": "2025-08-15T00:00:00",
+    "ReleaseDate": "2024-08-15T00:00:00",
     "Image": "Xiangliyao.png",
     "Rarity": 5,
     "Element": "Electro",
@@ -363,5 +363,39 @@
     "InGameSkins": [],
     "InternalName": "Xiangliyao",
     "DisplayName": "相里要"
+  },
+  {
+    "Keys": [
+      "shorekeeper"
+    ],
+    "ReleaseDate": "2024-09-29T00:00:00",
+    "Image": "shorekeeper.png",
+    "Rarity": 5,
+    "Element": "Spectro",
+    "Class": "Rectifier",
+    "Region": [
+      "Bshores"
+    ],
+    "ModFilesName": "shorekeeper",
+    "InGameSkins": [],
+    "InternalName": "Shorekeeper",
+    "DisplayName": "守岸人"
+  },
+  {
+    "Keys": [
+      "Youhu"
+    ],
+    "ReleaseDate": "2024-10-24T00:00:00",
+    "Image": "Youhu.png",
+    "Rarity": 4,
+    "Element": "Glacio",
+    "Class": "Gauntlet",
+    "Region": [
+      "Huanglong"
+    ],
+    "ModFilesName": "Youhu",
+    "InGameSkins": [],
+    "InternalName": "Youhu",
+    "DisplayName": "釉瑚"
   }
 ]
