--- a/src/GIMI-ModManager.WinUI/Assets/Games/ZZZ/Languages/ru-ru/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/ZZZ/Languages/ru-ru/characters.json
@@ -134,5 +134,9 @@
   {
     "InternalName": "Yanagi",
     "DisplayName": "Янаги"
+  },
+  {
+    "InternalName": "Others",
+    "DisplayName": "Другое"
   }
 ]
