--- a/src/GIMI-ModManager.WinUI/Assets/Games/Honkai/Languages/ru-ru/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/Honkai/Languages/ru-ru/characters.json
@@ -206,5 +206,61 @@
   {
     "InternalName": "Jade",
     "DisplayName": "Яшма"
+  },
+  {
+    "InternalName": "Aglaea",
+    "DisplayName": "Аглая"
+  },
+  {
+    "InternalName": "Anaxa",
+    "DisplayName": "Анакса"
+  },
+  {
+    "InternalName": "Castorice",
+    "DisplayName": "Кастория"
+  },
+  {
+    "InternalName": "Feixiao",
+    "DisplayName": "Фэйсяо"
+  },
+  {
+    "InternalName": "Fugue",
+    "DisplayName": "Фуга"
+  },
+  {
+    "InternalName": "Jiaoqiu",
+    "DisplayName": "Цзяоцю"
+  },
+  {
+    "InternalName": "Lingsha",
+    "DisplayName": "Линша"
+  },
+  {
+    "InternalName": "Moze",
+    "DisplayName": "Моцзэ"
+  },
+  {
+    "InternalName": "Mydei",
+    "DisplayName": "Мидей"
+  },
+  {
+    "InternalName": "Rappa",
+    "DisplayName": "Раппа"
+  },
+  {
+    "InternalName": "Sunday",
+    "DisplayName": "Воскресенье"
+  },
+  {
+    "InternalName": "The Herta",
+    "DisplayName": "Великая Герта"
+  },
+  {
+    "InternalName": "Tribbie",
+    "DisplayName": "Трибби"
+  },
+  {
+    "InternalName": "Yunli",
+    "DisplayName": "Юньли"
   }
 ]
