updated ru translate HSR

--- a/src/GIMI-ModManager.WinUI/Assets/Games/Honkai/Languages/ru-ru/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/Honkai/Languages/ru-ru/characters.json
@@ -89,7 +89,17 @@
   },
   {
     "InternalName": "March7",
-    "DisplayName": "Март 7"
+    "DisplayName": "Март 7",
+    "InGameSkins": [
+      {
+        "InternalName": "March7Hunt",
+        "DisplayName": "Март 7 - Охота"
+      },
+      {
+        "InternalName": "MarchNS",
+        "DisplayName": "Зарождение весны"
+      }
+    ]
   },
   {
     "InternalName": "Natasha",
