updated ru translate HSR

--- a/src/GIMI-ModManager.WinUI/Assets/Games/Honkai/Languages/ru-ru/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/Honkai/Languages/ru-ru/characters.json
@@ -93,7 +93,7 @@
     "InGameSkins": [
       {
         "InternalName": "March7Hunt",
-        "DisplayName": "Март 7 - Охота"
+        "DisplayName": "Охота"
       },
       {
         "InternalName": "MarchNS",
