updated ru locale for Vivian, Escoffier and Genshin skins

--- a/src/GIMI-ModManager.WinUI/Assets/Games/ZZZ/Languages/ru-ru/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/ZZZ/Languages/ru-ru/characters.json
@@ -136,6 +136,10 @@
     "DisplayName": "Янаги"
   },
   {
+    "InternalName": "Vivian",
+    "DisplayName": "Вивиан"
+  },
+  {
     "InternalName": "Others",
     "DisplayName": "Другое"
   }
