--- a/src/GIMI-ModManager.WinUI/Assets/Games/Genshin/Languages/ru-ru/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/Genshin/Languages/ru-ru/characters.json
@@ -142,6 +142,12 @@
     "DisplayName": "Горо"
   },
   {
+    "InGameSkins": [
+      {
+        "InternalName": "Hu Tao Cherries Snow-Laden",
+        "DisplayName": "Вишни под снегом"
+      }
+    ],
     "InternalName": "Hu Tao",
     "DisplayName": "Ху Тао"
   },
@@ -382,6 +388,12 @@
     "DisplayName": "Странник"
   },
   {
+    "InGameSkins": [
+      {
+        "InternalName": "Xiangling New Year's Cheer",
+        "DisplayName": "Новогоднее веселье"
+      }
+    ],
     "InternalName": "Xiangling",
     "DisplayName": "Сян Лин"
   },
@@ -518,5 +530,9 @@
   {
     "InternalName": "Yumemizuki Mizuki",
     "DisplayName": "Мидзуки"
+  },
+  {
+    "InternalName": "Escoffier",
+    "DisplayName": "Эскофье"
   }
 ]
