RU locale update

--- a/src/GIMI-ModManager.WinUI/Assets/Games/Genshin/Languages/ru-ru/characters.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/Genshin/Languages/ru-ru/characters.json
@@ -534,5 +534,13 @@
   {
     "InternalName": "Escoffier",
     "DisplayName": "Эскофье"
+  },
+  {
+    "InternalName": "Dahlia",
+    "DisplayName": "Далия"
+  },
+  {
+    "InternalName": "Skirk",
+    "DisplayName": "Скирк"
   }
 ]
