--- a/src/GIMI-ModManager.WinUI/Assets/Games/Genshin/Languages/zh-cn/regions.json
+++ b/src/GIMI-ModManager.WinUI/Assets/Games/Genshin/Languages/zh-cn/regions.json
@@ -24,7 +24,20 @@
     "DisplayName": "坎瑞亚"
   },
   {
+    "InternalName": "Natlan",
+    "DisplayName": "纳塔"
+  },
+  {
     "InternalName": "Snezhnaya",
-    "DisplayName": "至冬国"
+    "DisplayName": "至东"
+  },
+  {
+    "InternalName": "Extraterrestrial",
+    "DisplayName": "天外来客"
+  } ,
+  {
+    "InternalName": "Nod-Krai",
+    "DisplayName": "挪德卡莱"
   }
 ]
+ 
